# aiops-agent-executor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.kiro/steering/: AIDLC-GUIDE.md  agent-development.md  api-development.md  coding-standards.md  database-schema.md  project-overview.md  python-best-practices.md  testing-guide.md
alembic/: env.py
doc/01-feature/: 01-LLM配置管理.md  02-根据接受到的配置动态创建agent team.md
scripts/: seed_openrouter.py  seed_openrouter.sql  test_llm_service.py  test_sse_execution.py
specs/001-llm-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-config/checklists/: design-review.md  requirements.md  tasks-review.md
specs/001-llm-config/contracts/: openapi.yaml
specs/002-agent-orchestration/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-analysis.md  tasks.md
specs/002-agent-orchestration/checklists/: requirements.md
specs/002-agent-orchestration/contracts/: openapi.yaml
src/aiops_agent_executor/: __init__.py  main.py
src/aiops_agent_executor/adapters/: __init__.py  anthropic.py  base.py  openai.py  registry.py
src/aiops_agent_executor/agents/: __init__.py
src/aiops_agent_executor/api/v1/: exception_handlers.py  router.py
src/aiops_agent_executor/api/v1/endpoints/: credentials.py  endpoints.py  models.py  providers.py  teams.py
src/aiops_agent_executor/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
src/aiops_agent_executor/db/: base.py  session.py
src/aiops_agent_executor/db/models/: __init__.py  agent.py  provider.py  team.py
src/aiops_agent_executor/schemas/: __init__.py  common.py  execution.py  provider.py  team.py  topology.py
src/aiops_agent_executor/services/: __init__.py  agent_service.py  credential_service.py  endpoint_service.py  execution_service.py  llm_client.py  llm_service.py  model_service.py  node_service.py  provider_service.py  team_service.py
src/aiops_agent_executor/services/langgraph/: __init__.py  engine.py  state.py
src/aiops_agent_executor/utils/: load_balancer.py  masking.py  scheduler.py  topology.py
tests/: conftest.py
tests/unit/: test_health.py  test_langgraph_engine.py  test_masking.py  test_team_service.py  test_topology.py
